# browser-games

./: .eslintrc.json  .gitignore  .prettierignore  .prettierrc.toml  .stylelintcache  Cargo.toml  LICENSE  README.md  astro.config.mjs  astro.config.ts  biome.json  build.zig  bun.lockb  eslint.config.js  eslint.config.ts  index.html  knip.ts  package-lock.json  package.json  pnpm-lock.yaml  stylelint.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.astro/: settings.json
.github/workflows/: check.yml  deployment-pages.yml
chess/: index.html  main.js  main.ts  style.css
chess/js/: ai.test.ts  ai.ts  app.tsx  board.tsx  (+8 more)
chess/wasm/: Cargo.toml
chess/wasm/src/: board.rs  en_passant.rs  game.rs  get_ply.rs  js_function.rs  lib.rs  message_const.rs  piece.rs  player.rs  ply.rs  position.rs  state.rs  test_utils.rs  utils.rs
chess/wasm/src/ai/: evaluate.rs  mini_max.rs
chess/wasm/src/game/: finish.rs
chess/wasm/src/get_ply/: all_board.rs  bishop.rs  castling.rs  check_filter.rs  king.rs  knight.rs  pawn.rs  queen.rs  rook.rs  runs.rs  steps.rs
chess/wasm/src/player/: ai.rs
chess/wasm/src/state/: board.rs  board_square.rs  castling.rs  en_passant.rs  game_state.rs  mark.rs  piece.rs  ply.rs  position.rs
common/: random-select.ts  setting-modal.tsx  sleep.ts  types.ts
knight-tour/: index.html
mine-sweeper/: index.html  main.ts  style.css
ox3/: index.html  main.js  main.ts  style.css
src/: style.css
src-zig/: nought-and-cross.zig  reversi.zig
src/wasms/reversi/: Board.zig  Cargo.toml  ai.zig  main.zig
src/wasms/reversi/src/: lib.rs
(+499 files in other folders)
