[package]

name = "chess-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]

crate-type = ["cdylib"]


[profile.release]

lto = true
opt-level = 's'


[dependencies]

wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
js-sys = "0.3.64"
serde = { version = "1.0.164", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"


[dev-dependencies]

wasm-bindgen-test = "0.2"
