[package]

name = "reversi-wasm"
version = "0.1.0"
edition = "2021"
description = "reversi library for wasm"
repository = "https://github.com/mikiymk/js-html-game.git"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]

crate-type = ["cdylib"]


[dependencies]

wasm-bindgen = "0.2"
wee_alloc = "0.4.5"
js-sys = "0.3.64"


[dev-dependencies]

wasm-bindgen-test = "0.2"
